E--_parser.output
Terminals unused in grammar

   TOK_LEX_ERROR
   TOK_PAT_NOT
   TOK_UMINUS
   TOK_PRINT
   TOK_SHORT
   TOK_RBRACK
   TOK_QMARK
   TOK_LONG
   TOK_BIT
   TOK_ENUM
   TOK_DOUBLE_COLON
   TOK_LBRACK
   TOK_DOT


State 18 conflicts: 1 shift/reduce
State 120 conflicts: 1 shift/reduce


Grammar

    0 $accept: specification $end

    1 specification: decl_star rule_star

    2 decl_star: /* empty */
    3          | decl_star decl
    4          | decl_star error TOK_SEMICOLON

    5 decl: variable
    6     | event_decl TOK_SEMICOLON
    7     | func
    8     | class_decl TOK_SEMICOLON
    9     | TOK_SEMICOLON

   10 variable: type ident_list TOK_SEMICOLON
   11         | type error TOK_SEMICOLON
   12         | TOK_IDENT error TOK_SEMICOLON

   13 var_star: variable
   14         | var_star variable

   15 ident_list: ident_list TOK_COMMA var_ident
   16           | var_ident

   17 var_ident: TOK_IDENT
   18          | TOK_IDENT TOK_ASSIGN expr

   19 class_decl: TOK_CLASS class_ident
   20           | TOK_CLASS error

   21 class_ident: TOK_IDENT

   22 event_decl: event_hdr formal_list

   23 event_hdr: TOK_EVENT TOK_IDENT

   24 formal_list: TOK_LPAREN formal_param_list TOK_RPAREN

   25 formal_param_list: /* empty */
   26                  | formal_params

   27 formal_params: formal_param
   28              | formal_params TOK_COMMA formal_param

   29 formal_param: type var_ident

   30 func: func_hdr formal_list TOK_SEMICOLON
   31     | func_hdr formal_list func_body

   32 func_hdr: type TOK_IDENT
   33         | type error

   34 func_body: TOK_LBRACE func_stmt TOK_RBRACE

   35 func_stmt: stmt_star
   36          | var_star stmt_star

   37 rule_star: rule
   38          | rule_star rule

   39 rule: rule_pattern TOK_ARROW stmt

   40 rule_pattern: primitive_pat_star
   41             | rule_pattern TOK_PAT_STAR
   42             | TOK_NOT rule_pattern
   43             | rule_pattern TOK_PAT_OR rule_pattern
   44             | rule_pattern TOK_COLON rule_pattern
   45             | TOK_LPAREN rule_pattern TOK_RPAREN

   46 primitive_pat_star: primitive_pat
   47                   | primitive_pat TOK_BITOR expr

   48 primitive_pat: event_call

   49 event_call_header: TOK_IDENT TOK_LPAREN

   50 event_call: event_call_header event_params_list TOK_RPAREN
   51           | TOK_ANY

   52 event_params_list: event_params

   53 event_params: /* empty */
   54             | TOK_IDENT
   55             | event_params TOK_COMMA TOK_IDENT

   56 stmt: TOK_SEMICOLON
   57     | return_stmt TOK_SEMICOLON
   58     | break_stmt TOK_SEMICOLON
   59     | compstmt_star
   60     | assign_expr TOK_SEMICOLON
   61     | if_expr_star
   62     | while_expr
   63     | fun_call_stmt

   64 compstmt_star: compstmt
   65              | compstmt TOK_SEMICOLON

   66 compstmt: TOK_LBRACE stmt_star TOK_RBRACE

   67 stmt_star: stmt_star stmt
   68          | stmt
   69          | stmt_star error

   70 return_stmt: TOK_RETURN expr

   71 break_stmt: TOK_BREAK

   72 if_expr_star: if_expr
   73             | if_expr TOK_ELSE stmt

   74 if_expr: TOK_IF expr stmt

   75 while_expr: TOK_WHILE expr stmt

   76 fun_call_stmt: TOK_IDENT func_params TOK_SEMICOLON

   77 fun_call: TOK_IDENT func_params

   78 func_params: TOK_LPAREN func_param_list TOK_RPAREN

   79 func_param_list: /* empty */
   80                | expr
   81                | func_param_list TOK_COMMA expr

   82 expr: expr_star
   83     | expr TOK_PLUS expr
   84     | expr TOK_MINUS expr
   85     | expr TOK_MULT expr
   86     | expr TOK_DIV expr
   87     | expr TOK_MOD expr
   88     | expr TOK_BITAND expr
   89     | expr TOK_BITOR expr
   90     | expr TOK_BITXOR expr
   91     | expr TOK_SHL expr
   92     | expr TOK_SHR expr
   93     | expr TOK_AND expr
   94     | expr TOK_OR expr
   95     | expr TOK_EQ expr
   96     | expr TOK_NE expr
   97     | expr TOK_GT expr
   98     | expr TOK_LT expr
   99     | expr TOK_GE expr
  100     | expr TOK_LE expr
  101     | TOK_LPAREN expr TOK_RPAREN
  102     | TOK_MINUS expr
  103     | TOK_NOT expr
  104     | TOK_BITNOT expr

  105 expr_star: literal
  106          | ref_expr
  107          | assign_expr
  108          | fun_call

  109 assign_expr: ref_expr TOK_ASSIGN expr

  110 ref_expr: TOK_IDENT

  111 literal: TOK_STRCONST
  112        | TOK_UINTNUM
  113        | TOK_DOUBLENUM
  114        | TOK_TRUE
  115        | TOK_FALSE

  116 baseType: TOK_BOOL
  117         | TOK_BYTE
  118         | TOK_VOID
  119         | TOK_INT
  120         | TOK_DOUBLE
  121         | TOK_STRING
  122         | TOK_UNSIGNED TOK_INT

  123 type: baseType
  124     | TOK_IDENT


Terminals, with rules where they appear

$end (0) 0
error (256) 4 11 12 20 33 69
TOK_LEX_ERROR (258)
TOK_PAT_STAR (259) 41
TOK_PAT_OR (260) 43
TOK_PAT_NOT (261)
TOK_PLUS (262) 83
TOK_MINUS (263) 84 102
TOK_UMINUS (264)
TOK_MULT (265) 85
TOK_DIV (266) 86
TOK_MOD (267) 87
TOK_BITAND (268) 88
TOK_BITOR (269) 47 89
TOK_BITNOT (270) 104
TOK_BITXOR (271) 90
TOK_SHL (272) 91
TOK_SHR (273) 92
TOK_GT (274) 97
TOK_LT (275) 98
TOK_GE (276) 99
TOK_LE (277) 100
TOK_EQ (278) 95
TOK_NE (279) 96
TOK_AND (280) 93
TOK_OR (281) 94
TOK_NOT (282) 42 103
TOK_COMMA (283) 15 28 55 81
TOK_ASSIGN (284) 18 109
TOK_SEMICOLON (285) 4 6 8 9 10 11 12 30 56 57 58 60 65 76
TOK_COLON (286) 44
TOK_ARROW (287) 39
TOK_LBRACE (288) 34 66
TOK_RBRACE (289) 34 66
TOK_LPAREN (290) 24 45 49 78 101
TOK_RPAREN (291) 24 45 50 78 101
TOK_IF (292) 74
TOK_ELSE (293) 73
TOK_CLASS (294) 19 20
TOK_RETURN (295) 70
TOK_EVENT (296) 23
TOK_ANY (297) 51
TOK_PRINT (298)
TOK_UINTNUM (299) 112
TOK_DOUBLENUM (300) 113
TOK_VOID (301) 118
TOK_STRING (302) 121
TOK_STRCONST (303) 111
TOK_INT (304) 119 122
TOK_UNSIGNED (305) 122
TOK_BOOL (306) 116
TOK_BYTE (307) 117
TOK_DOUBLE (308) 120
TOK_SHORT (309)
TOK_TRUE (310) 114
TOK_FALSE (311) 115
TOK_IDENT (312) 12 17 18 21 23 32 49 54 55 76 77 110 124
TOK_WHILE (313) 75
TOK_BREAK (314) 71
TOK_RBRACK (315)
TOK_QMARK (316)
TOK_LONG (317)
TOK_BIT (318)
TOK_ENUM (319)
"reduce" (320)
"then" (321)
TOK_DOUBLE_COLON (322)
TOK_LBRACK (323)
TOK_DOT (324)


Nonterminals, with rules where they appear

$accept (70)
    on left: 0
specification (71)
    on left: 1, on right: 0
decl_star (72)
    on left: 2 3 4, on right: 1 3 4
decl (73)
    on left: 5 6 7 8 9, on right: 3
variable (74)
    on left: 10 11 12, on right: 5 13 14
var_star (75)
    on left: 13 14, on right: 14 36
ident_list (76)
    on left: 15 16, on right: 10 15
var_ident (77)
    on left: 17 18, on right: 15 16 29
class_decl (78)
    on left: 19 20, on right: 8
class_ident (79)
    on left: 21, on right: 19
event_decl (80)
    on left: 22, on right: 6
event_hdr (81)
    on left: 23, on right: 22
formal_list (82)
    on left: 24, on right: 22 30 31
formal_param_list (83)
    on left: 25 26, on right: 24
formal_params (84)
    on left: 27 28, on right: 26 28
formal_param (85)
    on left: 29, on right: 27 28
func (86)
    on left: 30 31, on right: 7
func_hdr (87)
    on left: 32 33, on right: 30 31
func_body (88)
    on left: 34, on right: 31
func_stmt (89)
    on left: 35 36, on right: 34
rule_star (90)
    on left: 37 38, on right: 1 38
rule (91)
    on left: 39, on right: 37 38
rule_pattern (92)
    on left: 40 41 42 43 44 45, on right: 39 41 42 43 44 45
primitive_pat_star (93)
    on left: 46 47, on right: 40
primitive_pat (94)
    on left: 48, on right: 46 47
event_call_header (95)
    on left: 49, on right: 50
event_call (96)
    on left: 50 51, on right: 48
event_params_list (97)
    on left: 52, on right: 50
event_params (98)
    on left: 53 54 55, on right: 52 55
stmt (99)
    on left: 56 57 58 59 60 61 62 63, on right: 39 67 68 73 74 75
compstmt_star (100)
    on left: 64 65, on right: 59
compstmt (101)
    on left: 66, on right: 64 65
stmt_star (102)
    on left: 67 68 69, on right: 35 36 66 67 69
return_stmt (103)
    on left: 70, on right: 57
break_stmt (104)
    on left: 71, on right: 58
if_expr_star (105)
    on left: 72 73, on right: 61
if_expr (106)
    on left: 74, on right: 72 73
while_expr (107)
    on left: 75, on right: 62
fun_call_stmt (108)
    on left: 76, on right: 63
fun_call (109)
    on left: 77, on right: 108
func_params (110)
    on left: 78, on right: 76 77
func_param_list (111)
    on left: 79 80 81, on right: 78 81
expr (112)
    on left: 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99
    100 101 102 103 104, on right: 18 47 70 74 75 80 81 83 84 85 86
    87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 109
expr_star (113)
    on left: 105 106 107 108, on right: 82
assign_expr (114)
    on left: 109, on right: 60 107
ref_expr (115)
    on left: 110, on right: 106 109
literal (116)
    on left: 111 112 113 114 115, on right: 105
baseType (117)
    on left: 116 117 118 119 120 121 122, on right: 123
type (118)
    on left: 123 124, on right: 10 11 29 32 33


state 0

    0 $accept: . specification $end

    $default  reduce using rule 2 (decl_star)

    specification  go to state 1
    decl_star      go to state 2


state 1

    0 $accept: specification . $end

    $end  shift, and go to state 3


state 2

    1 specification: decl_star . rule_star
    3 decl_star: decl_star . decl
    4          | decl_star . error TOK_SEMICOLON

    error          shift, and go to state 4
    TOK_NOT        shift, and go to state 5
    TOK_SEMICOLON  shift, and go to state 6
    TOK_LPAREN     shift, and go to state 7
    TOK_CLASS      shift, and go to state 8
    TOK_EVENT      shift, and go to state 9
    TOK_ANY        shift, and go to state 10
    TOK_VOID       shift, and go to state 11
    TOK_STRING     shift, and go to state 12
    TOK_INT        shift, and go to state 13
    TOK_UNSIGNED   shift, and go to state 14
    TOK_BOOL       shift, and go to state 15
    TOK_BYTE       shift, and go to state 16
    TOK_DOUBLE     shift, and go to state 17
    TOK_IDENT      shift, and go to state 18

    decl                go to state 19
    variable            go to state 20
    class_decl          go to state 21
    event_decl          go to state 22
    event_hdr           go to state 23
    func                go to state 24
    func_hdr            go to state 25
    rule_star           go to state 26
    rule                go to state 27
    rule_pattern        go to state 28
    primitive_pat_star  go to state 29
    primitive_pat       go to state 30
    event_call_header   go to state 31
    event_call          go to state 32
    baseType            go to state 33
    type                go to state 34


state 3

    0 $accept: specification $end .

    $default  accept


state 4

    4 decl_star: decl_star error . TOK_SEMICOLON

    TOK_SEMICOLON  shift, and go to state 35


state 5

   42 rule_pattern: TOK_NOT . rule_pattern

    TOK_NOT     shift, and go to state 5
    TOK_LPAREN  shift, and go to state 7
    TOK_ANY     shift, and go to state 10
    TOK_IDENT   shift, and go to state 36

    rule_pattern        go to state 37
    primitive_pat_star  go to state 29
    primitive_pat       go to state 30
    event_call_header   go to state 31
    event_call          go to state 32


state 6

    9 decl: TOK_SEMICOLON .

    $default  reduce using rule 9 (decl)


state 7

   45 rule_pattern: TOK_LPAREN . rule_pattern TOK_RPAREN

    TOK_NOT     shift, and go to state 5
    TOK_LPAREN  shift, and go to state 7
    TOK_ANY     shift, and go to state 10
    TOK_IDENT   shift, and go to state 36

    rule_pattern        go to state 38
    primitive_pat_star  go to state 29
    primitive_pat       go to state 30
    event_call_header   go to state 31
    event_call          go to state 32


state 8

   19 class_decl: TOK_CLASS . class_ident
   20           | TOK_CLASS . error

    error      shift, and go to state 39
    TOK_IDENT  shift, and go to state 40

    class_ident  go to state 41


state 9

   23 event_hdr: TOK_EVENT . TOK_IDENT

    TOK_IDENT  shift, and go to state 42


state 10

   51 event_call: TOK_ANY .

    $default  reduce using rule 51 (event_call)


state 11

  118 baseType: TOK_VOID .

    $default  reduce using rule 118 (baseType)


state 12

  121 baseType: TOK_STRING .

    $default  reduce using rule 121 (baseType)


state 13

  119 baseType: TOK_INT .

    $default  reduce using rule 119 (baseType)


state 14

  122 baseType: TOK_UNSIGNED . TOK_INT

    TOK_INT  shift, and go to state 43


state 15

  116 baseType: TOK_BOOL .

    $default  reduce using rule 116 (baseType)


state 16

  117 baseType: TOK_BYTE .

    $default  reduce using rule 117 (baseType)


state 17

  120 baseType: TOK_DOUBLE .

    $default  reduce using rule 120 (baseType)


state 18

   12 variable: TOK_IDENT . error TOK_SEMICOLON
   49 event_call_header: TOK_IDENT . TOK_LPAREN
  124 type: TOK_IDENT .

    error       shift, and go to state 44
    TOK_LPAREN  shift, and go to state 45

    error      [reduce using rule 124 (type)]
    TOK_IDENT  reduce using rule 124 (type)


state 19

    3 decl_star: decl_star decl .

    $default  reduce using rule 3 (decl_star)


state 20

    5 decl: variable .

    $default  reduce using rule 5 (decl)


state 21

    8 decl: class_decl . TOK_SEMICOLON

    TOK_SEMICOLON  shift, and go to state 46


state 22

    6 decl: event_decl . TOK_SEMICOLON

    TOK_SEMICOLON  shift, and go to state 47


state 23

   22 event_decl: event_hdr . formal_list

    TOK_LPAREN  shift, and go to state 48

    formal_list  go to state 49


state 24

    7 decl: func .

    $default  reduce using rule 7 (decl)


state 25

   30 func: func_hdr . formal_list TOK_SEMICOLON
   31     | func_hdr . formal_list func_body

    TOK_LPAREN  shift, and go to state 48

    formal_list  go to state 50


state 26

    1 specification: decl_star rule_star .
   38 rule_star: rule_star . rule

    TOK_NOT     shift, and go to state 5
    TOK_LPAREN  shift, and go to state 7
    TOK_ANY     shift, and go to state 10
    TOK_IDENT   shift, and go to state 36

    $default  reduce using rule 1 (specification)

    rule                go to state 51
    rule_pattern        go to state 28
    primitive_pat_star  go to state 29
    primitive_pat       go to state 30
    event_call_header   go to state 31
    event_call          go to state 32


state 27

   37 rule_star: rule .

    $default  reduce using rule 37 (rule_star)


state 28

   39 rule: rule_pattern . TOK_ARROW stmt
   41 rule_pattern: rule_pattern . TOK_PAT_STAR
   43             | rule_pattern . TOK_PAT_OR rule_pattern
   44             | rule_pattern . TOK_COLON rule_pattern

    TOK_PAT_STAR  shift, and go to state 52
    TOK_PAT_OR    shift, and go to state 53
    TOK_COLON     shift, and go to state 54
    TOK_ARROW     shift, and go to state 55


state 29

   40 rule_pattern: primitive_pat_star .

    $default  reduce using rule 40 (rule_pattern)


state 30

   46 primitive_pat_star: primitive_pat .
   47                   | primitive_pat . TOK_BITOR expr

    TOK_BITOR  shift, and go to state 56

    $default  reduce using rule 46 (primitive_pat_star)


state 31

   50 event_call: event_call_header . event_params_list TOK_RPAREN

    TOK_IDENT  shift, and go to state 57

    $default  reduce using rule 53 (event_params)

    event_params_list  go to state 58
    event_params       go to state 59


state 32

   48 primitive_pat: event_call .

    $default  reduce using rule 48 (primitive_pat)


state 33

  123 type: baseType .

    $default  reduce using rule 123 (type)


state 34

   10 variable: type . ident_list TOK_SEMICOLON
   11         | type . error TOK_SEMICOLON
   32 func_hdr: type . TOK_IDENT
   33         | type . error

    error      shift, and go to state 60
    TOK_IDENT  shift, and go to state 61

    ident_list  go to state 62
    var_ident   go to state 63


state 35

    4 decl_star: decl_star error TOK_SEMICOLON .

    $default  reduce using rule 4 (decl_star)


state 36

   49 event_call_header: TOK_IDENT . TOK_LPAREN

    TOK_LPAREN  shift, and go to state 45


state 37

   41 rule_pattern: rule_pattern . TOK_PAT_STAR
   42             | TOK_NOT rule_pattern .
   43             | rule_pattern . TOK_PAT_OR rule_pattern
   44             | rule_pattern . TOK_COLON rule_pattern

    $default  reduce using rule 42 (rule_pattern)


state 38

   41 rule_pattern: rule_pattern . TOK_PAT_STAR
   43             | rule_pattern . TOK_PAT_OR rule_pattern
   44             | rule_pattern . TOK_COLON rule_pattern
   45             | TOK_LPAREN rule_pattern . TOK_RPAREN

    TOK_PAT_STAR  shift, and go to state 52
    TOK_PAT_OR    shift, and go to state 53
    TOK_COLON     shift, and go to state 54
    TOK_RPAREN    shift, and go to state 64


state 39

   20 class_decl: TOK_CLASS error .

    $default  reduce using rule 20 (class_decl)


state 40

   21 class_ident: TOK_IDENT .

    $default  reduce using rule 21 (class_ident)


state 41

   19 class_decl: TOK_CLASS class_ident .

    $default  reduce using rule 19 (class_decl)


state 42

   23 event_hdr: TOK_EVENT TOK_IDENT .

    $default  reduce using rule 23 (event_hdr)


state 43

  122 baseType: TOK_UNSIGNED TOK_INT .

    $default  reduce using rule 122 (baseType)


state 44

   12 variable: TOK_IDENT error . TOK_SEMICOLON

    TOK_SEMICOLON  shift, and go to state 65


state 45

   49 event_call_header: TOK_IDENT TOK_LPAREN .

    $default  reduce using rule 49 (event_call_header)


state 46

    8 decl: class_decl TOK_SEMICOLON .

    $default  reduce using rule 8 (decl)


state 47

    6 decl: event_decl TOK_SEMICOLON .

    $default  reduce using rule 6 (decl)


state 48

   24 formal_list: TOK_LPAREN . formal_param_list TOK_RPAREN

    TOK_VOID      shift, and go to state 11
    TOK_STRING    shift, and go to state 12
    TOK_INT       shift, and go to state 13
    TOK_UNSIGNED  shift, and go to state 14
    TOK_BOOL      shift, and go to state 15
    TOK_BYTE      shift, and go to state 16
    TOK_DOUBLE    shift, and go to state 17
    TOK_IDENT     shift, and go to state 66

    $default  reduce using rule 25 (formal_param_list)

    formal_param_list  go to state 67
    formal_params      go to state 68
    formal_param       go to state 69
    baseType           go to state 33
    type               go to state 70


state 49

   22 event_decl: event_hdr formal_list .

    $default  reduce using rule 22 (event_decl)


state 50

   30 func: func_hdr formal_list . TOK_SEMICOLON
   31     | func_hdr formal_list . func_body

    TOK_SEMICOLON  shift, and go to state 71
    TOK_LBRACE     shift, and go to state 72

    func_body  go to state 73


state 51

   38 rule_star: rule_star rule .

    $default  reduce using rule 38 (rule_star)


state 52

   41 rule_pattern: rule_pattern TOK_PAT_STAR .

    $default  reduce using rule 41 (rule_pattern)


state 53

   43 rule_pattern: rule_pattern TOK_PAT_OR . rule_pattern

    TOK_NOT     shift, and go to state 5
    TOK_LPAREN  shift, and go to state 7
    TOK_ANY     shift, and go to state 10
    TOK_IDENT   shift, and go to state 36

    rule_pattern        go to state 74
    primitive_pat_star  go to state 29
    primitive_pat       go to state 30
    event_call_header   go to state 31
    event_call          go to state 32


state 54

   44 rule_pattern: rule_pattern TOK_COLON . rule_pattern

    TOK_NOT     shift, and go to state 5
    TOK_LPAREN  shift, and go to state 7
    TOK_ANY     shift, and go to state 10
    TOK_IDENT   shift, and go to state 36

    rule_pattern        go to state 75
    primitive_pat_star  go to state 29
    primitive_pat       go to state 30
    event_call_header   go to state 31
    event_call          go to state 32


state 55

   39 rule: rule_pattern TOK_ARROW . stmt

    TOK_SEMICOLON  shift, and go to state 76
    TOK_LBRACE     shift, and go to state 77
    TOK_IF         shift, and go to state 78
    TOK_RETURN     shift, and go to state 79
    TOK_IDENT      shift, and go to state 80
    TOK_WHILE      shift, and go to state 81
    TOK_BREAK      shift, and go to state 82

    stmt           go to state 83
    compstmt_star  go to state 84
    compstmt       go to state 85
    return_stmt    go to state 86
    break_stmt     go to state 87
    if_expr_star   go to state 88
    if_expr        go to state 89
    while_expr     go to state 90
    fun_call_stmt  go to state 91
    assign_expr    go to state 92
    ref_expr       go to state 93


state 56

   47 primitive_pat_star: primitive_pat TOK_BITOR . expr

    TOK_MINUS      shift, and go to state 94
    TOK_BITNOT     shift, and go to state 95
    TOK_NOT        shift, and go to state 96
    TOK_LPAREN     shift, and go to state 97
    TOK_UINTNUM    shift, and go to state 98
    TOK_DOUBLENUM  shift, and go to state 99
    TOK_STRCONST   shift, and go to state 100
    TOK_TRUE       shift, and go to state 101
    TOK_FALSE      shift, and go to state 102
    TOK_IDENT      shift, and go to state 103

    fun_call     go to state 104
    expr         go to state 105
    expr_star    go to state 106
    assign_expr  go to state 107
    ref_expr     go to state 108
    literal      go to state 109


state 57

   54 event_params: TOK_IDENT .

    $default  reduce using rule 54 (event_params)


state 58

   50 event_call: event_call_header event_params_list . TOK_RPAREN

    TOK_RPAREN  shift, and go to state 110


state 59

   52 event_params_list: event_params .
   55 event_params: event_params . TOK_COMMA TOK_IDENT

    TOK_COMMA  shift, and go to state 111

    $default  reduce using rule 52 (event_params_list)


state 60

   11 variable: type error . TOK_SEMICOLON
   33 func_hdr: type error .

    TOK_SEMICOLON  shift, and go to state 112

    $default  reduce using rule 33 (func_hdr)


state 61

   17 var_ident: TOK_IDENT .
   18          | TOK_IDENT . TOK_ASSIGN expr
   32 func_hdr: type TOK_IDENT .

    TOK_ASSIGN  shift, and go to state 113

    TOK_LPAREN  reduce using rule 32 (func_hdr)
    $default    reduce using rule 17 (var_ident)


state 62

   10 variable: type ident_list . TOK_SEMICOLON
   15 ident_list: ident_list . TOK_COMMA var_ident

    TOK_COMMA      shift, and go to state 114
    TOK_SEMICOLON  shift, and go to state 115


state 63

   16 ident_list: var_ident .

    $default  reduce using rule 16 (ident_list)


state 64

   45 rule_pattern: TOK_LPAREN rule_pattern TOK_RPAREN .

    $default  reduce using rule 45 (rule_pattern)


state 65

   12 variable: TOK_IDENT error TOK_SEMICOLON .

    $default  reduce using rule 12 (variable)


state 66

  124 type: TOK_IDENT .

    $default  reduce using rule 124 (type)


state 67

   24 formal_list: TOK_LPAREN formal_param_list . TOK_RPAREN

    TOK_RPAREN  shift, and go to state 116


state 68

   26 formal_param_list: formal_params .
   28 formal_params: formal_params . TOK_COMMA formal_param

    TOK_COMMA  shift, and go to state 117

    $default  reduce using rule 26 (formal_param_list)


state 69

   27 formal_params: formal_param .

    $default  reduce using rule 27 (formal_params)


state 70

   29 formal_param: type . var_ident

    TOK_IDENT  shift, and go to state 118

    var_ident  go to state 119


state 71

   30 func: func_hdr formal_list TOK_SEMICOLON .

    $default  reduce using rule 30 (func)


state 72

   34 func_body: TOK_LBRACE . func_stmt TOK_RBRACE

    TOK_SEMICOLON  shift, and go to state 76
    TOK_LBRACE     shift, and go to state 77
    TOK_IF         shift, and go to state 78
    TOK_RETURN     shift, and go to state 79
    TOK_VOID       shift, and go to state 11
    TOK_STRING     shift, and go to state 12
    TOK_INT        shift, and go to state 13
    TOK_UNSIGNED   shift, and go to state 14
    TOK_BOOL       shift, and go to state 15
    TOK_BYTE       shift, and go to state 16
    TOK_DOUBLE     shift, and go to state 17
    TOK_IDENT      shift, and go to state 120
    TOK_WHILE      shift, and go to state 81
    TOK_BREAK      shift, and go to state 82

    variable       go to state 121
    var_star       go to state 122
    func_stmt      go to state 123
    stmt           go to state 124
    compstmt_star  go to state 84
    compstmt       go to state 85
    stmt_star      go to state 125
    return_stmt    go to state 86
    break_stmt     go to state 87
    if_expr_star   go to state 88
    if_expr        go to state 89
    while_expr     go to state 90
    fun_call_stmt  go to state 91
    assign_expr    go to state 92
    ref_expr       go to state 93
    baseType       go to state 33
    type           go to state 126


state 73

   31 func: func_hdr formal_list func_body .

    $default  reduce using rule 31 (func)


state 74

   41 rule_pattern: rule_pattern . TOK_PAT_STAR
   43             | rule_pattern . TOK_PAT_OR rule_pattern
   43             | rule_pattern TOK_PAT_OR rule_pattern .
   44             | rule_pattern . TOK_COLON rule_pattern

    TOK_PAT_STAR  shift, and go to state 52
    TOK_COLON     shift, and go to state 54

    $default  reduce using rule 43 (rule_pattern)


state 75

   41 rule_pattern: rule_pattern . TOK_PAT_STAR
   43             | rule_pattern . TOK_PAT_OR rule_pattern
   44             | rule_pattern . TOK_COLON rule_pattern
   44             | rule_pattern TOK_COLON rule_pattern .

    TOK_PAT_STAR  shift, and go to state 52

    $default  reduce using rule 44 (rule_pattern)


state 76

   56 stmt: TOK_SEMICOLON .

    $default  reduce using rule 56 (stmt)


state 77

   66 compstmt: TOK_LBRACE . stmt_star TOK_RBRACE

    TOK_SEMICOLON  shift, and go to state 76
    TOK_LBRACE     shift, and go to state 77
    TOK_IF         shift, and go to state 78
    TOK_RETURN     shift, and go to state 79
    TOK_IDENT      shift, and go to state 80
    TOK_WHILE      shift, and go to state 81
    TOK_BREAK      shift, and go to state 82

    stmt           go to state 124
    compstmt_star  go to state 84
    compstmt       go to state 85
    stmt_star      go to state 127
    return_stmt    go to state 86
    break_stmt     go to state 87
    if_expr_star   go to state 88
    if_expr        go to state 89
    while_expr     go to state 90
    fun_call_stmt  go to state 91
    assign_expr    go to state 92
    ref_expr       go to state 93


state 78

   74 if_expr: TOK_IF . expr stmt

    TOK_MINUS      shift, and go to state 94
    TOK_BITNOT     shift, and go to state 95
    TOK_NOT        shift, and go to state 96
    TOK_LPAREN     shift, and go to state 97
    TOK_UINTNUM    shift, and go to state 98
    TOK_DOUBLENUM  shift, and go to state 99
    TOK_STRCONST   shift, and go to state 100
    TOK_TRUE       shift, and go to state 101
    TOK_FALSE      shift, and go to state 102
    TOK_IDENT      shift, and go to state 103

    fun_call     go to state 104
    expr         go to state 128
    expr_star    go to state 106
    assign_expr  go to state 107
    ref_expr     go to state 108
    literal      go to state 109


state 79

   70 return_stmt: TOK_RETURN . expr

    TOK_MINUS      shift, and go to state 94
    TOK_BITNOT     shift, and go to state 95
    TOK_NOT        shift, and go to state 96
    TOK_LPAREN     shift, and go to state 97
    TOK_UINTNUM    shift, and go to state 98
    TOK_DOUBLENUM  shift, and go to state 99
    TOK_STRCONST   shift, and go to state 100
    TOK_TRUE       shift, and go to state 101
    TOK_FALSE      shift, and go to state 102
    TOK_IDENT      shift, and go to state 103

    fun_call     go to state 104
    expr         go to state 129
    expr_star    go to state 106
    assign_expr  go to state 107
    ref_expr     go to state 108
    literal      go to state 109


state 80

   76 fun_call_stmt: TOK_IDENT . func_params TOK_SEMICOLON
  110 ref_expr: TOK_IDENT .

    TOK_LPAREN  shift, and go to state 130

    $default  reduce using rule 110 (ref_expr)

    func_params  go to state 131


state 81

   75 while_expr: TOK_WHILE . expr stmt

    TOK_MINUS      shift, and go to state 94
    TOK_BITNOT     shift, and go to state 95
    TOK_NOT        shift, and go to state 96
    TOK_LPAREN     shift, and go to state 97
    TOK_UINTNUM    shift, and go to state 98
    TOK_DOUBLENUM  shift, and go to state 99
    TOK_STRCONST   shift, and go to state 100
    TOK_TRUE       shift, and go to state 101
    TOK_FALSE      shift, and go to state 102
    TOK_IDENT      shift, and go to state 103

    fun_call     go to state 104
    expr         go to state 132
    expr_star    go to state 106
    assign_expr  go to state 107
    ref_expr     go to state 108
    literal      go to state 109


state 82

   71 break_stmt: TOK_BREAK .

    $default  reduce using rule 71 (break_stmt)


state 83

   39 rule: rule_pattern TOK_ARROW stmt .

    $default  reduce using rule 39 (rule)


state 84

   59 stmt: compstmt_star .

    $default  reduce using rule 59 (stmt)


state 85

   64 compstmt_star: compstmt .
   65              | compstmt . TOK_SEMICOLON

    TOK_SEMICOLON  shift, and go to state 133

    $default  reduce using rule 64 (compstmt_star)


state 86

   57 stmt: return_stmt . TOK_SEMICOLON

    TOK_SEMICOLON  shift, and go to state 134


state 87

   58 stmt: break_stmt . TOK_SEMICOLON

    TOK_SEMICOLON  shift, and go to state 135


state 88

   61 stmt: if_expr_star .

    $default  reduce using rule 61 (stmt)


state 89

   72 if_expr_star: if_expr .
   73             | if_expr . TOK_ELSE stmt

    TOK_ELSE  shift, and go to state 136

    $default  reduce using rule 72 (if_expr_star)


state 90

   62 stmt: while_expr .

    $default  reduce using rule 62 (stmt)


state 91

   63 stmt: fun_call_stmt .

    $default  reduce using rule 63 (stmt)


state 92

   60 stmt: assign_expr . TOK_SEMICOLON

    TOK_SEMICOLON  shift, and go to state 137


state 93

  109 assign_expr: ref_expr . TOK_ASSIGN expr

    TOK_ASSIGN  shift, and go to state 138


state 94

  102 expr: TOK_MINUS . expr

    TOK_MINUS      shift, and go to state 94
    TOK_BITNOT     shift, and go to state 95
    TOK_NOT        shift, and go to state 96
    TOK_LPAREN     shift, and go to state 97
    TOK_UINTNUM    shift, and go to state 98
    TOK_DOUBLENUM  shift, and go to state 99
    TOK_STRCONST   shift, and go to state 100
    TOK_TRUE       shift, and go to state 101
    TOK_FALSE      shift, and go to state 102
    TOK_IDENT      shift, and go to state 103

    fun_call     go to state 104
    expr         go to state 139
    expr_star    go to state 106
    assign_expr  go to state 107
    ref_expr     go to state 108
    literal      go to state 109


state 95

  104 expr: TOK_BITNOT . expr

    TOK_MINUS      shift, and go to state 94
    TOK_BITNOT     shift, and go to state 95
    TOK_NOT        shift, and go to state 96
    TOK_LPAREN     shift, and go to state 97
    TOK_UINTNUM    shift, and go to state 98
    TOK_DOUBLENUM  shift, and go to state 99
    TOK_STRCONST   shift, and go to state 100
    TOK_TRUE       shift, and go to state 101
    TOK_FALSE      shift, and go to state 102
    TOK_IDENT      shift, and go to state 103

    fun_call     go to state 104
    expr         go to state 140
    expr_star    go to state 106
    assign_expr  go to state 107
    ref_expr     go to state 108
    literal      go to state 109


state 96

  103 expr: TOK_NOT . expr

    TOK_MINUS      shift, and go to state 94
    TOK_BITNOT     shift, and go to state 95
    TOK_NOT        shift, and go to state 96
    TOK_LPAREN     shift, and go to state 97
    TOK_UINTNUM    shift, and go to state 98
    TOK_DOUBLENUM  shift, and go to state 99
    TOK_STRCONST   shift, and go to state 100
    TOK_TRUE       shift, and go to state 101
    TOK_FALSE      shift, and go to state 102
    TOK_IDENT      shift, and go to state 103

    fun_call     go to state 104
    expr         go to state 141
    expr_star    go to state 106
    assign_expr  go to state 107
    ref_expr     go to state 108
    literal      go to state 109


state 97

  101 expr: TOK_LPAREN . expr TOK_RPAREN
